project2/CloudFormations/CEG3120-Instance-Template2.YML
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Cloud configuration file for CEG 3120.  This template will build three Ubuntu servers with individual project package needs.
Parameters:
  UbuntuInstanceType:
    Description: Ubuntu Server instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  SSHLocation:
    Description: ' The IP address range that can be used to access the EC2 instance'
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Mappings:
  AWSInstanceType2Arch:  # Supported architectures (x64bit only)
    # only care about micro
    #t2.small:
      #Arch: HVM64
    #t2.small:
      #Arch: HVM64
    t2.micro:
      Arch: HVM64
  AWSRegionUbuntu: # AMI for Ubuntu server in each supported region 
    us-east-1:   # N. Virginia
      PV64: NOT_SUPPORTED
      HVM64: ami-07d0cf3af28718ef8
      HVMG2: NOT_SUPPORTED
    us-east-2:   # Ohio
      PV64: NOT_SUPPORTED
      HVM64: NOT_SUPPORTED
      HVMG2: NOT_SUPPORTED
  #  us-west-1:   # N. California
  #    PV64: NOT_SUPPORTED
  #    HVM64: NOT_SUPPORTED
  #    HVMG2: NOT_SUPPORTED
  #  us-west-2:   # Oregon
  #    PV64: NOT_SUPPORTED
  #    HVM64: NOT_SUPPORTED
  #    HVMG2: NOT_SUPPORTED
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: CEG3120 VPC
  Subnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: CEG3120 Subnet
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
  Route:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
  # will also have 3 servers, keeping naming convention here
  # Resource out IP per instance
  Ubuntu1IPAddress:
    Type: 'AWS::EC2::EIP'
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref Ubuntu1Instance
  Ubuntu2IPAddress:
    Type: 'AWS::EC2::EIP'
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref Ubuntu2Instance
  Ubuntu3IPAddress:
    Type: 'AWS::EC2::EIP'
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref Ubuntu3Instance
  # TODO: Setup the security groups needed by our machines
  # SSH, LDAP, HTTP, HTTPS
  LinuxSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22 and LDAP via port 389/636
      GroupName: CEG3120 Project 2 Security Group
      SecurityGroupIngress:
        # Home CIDR
        - IpProtocol: -1
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 75.186.40.190/32
        # WSU CIDR
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 130.108.0.0/16
        #  Private Network CIDR
        - IpProtocol: tcp #SSH
          FromPort: '22'
          ToPort: '22'
          CidrIp: 10.0.0.0/24
        - IpProtocol: tcp # HTTP
          FromPort: '80'
          ToPort: '80'
          CidrIp: 10.0.0.0/24
        - IpProtocol: -1
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 10.0.0.0/24 # Above is Redundant but safety net
         # May be wise to go back to top where SSHLocation "variable" was made
        - IpProtocol: tcp  #HTTP
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp  #HTTPS
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp  #SSH
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation 
        - IpProtocol: tcp # LDAP/OpenLDAP
          FromPort: '389'
          ToPort: '389'
          CidrIp: !Ref SSHLocation 
        - IpProtocol: tcp # LDAP/OpenLDAP
          FromPort: '636'
          ToPort: '636'
          CidrIp: !Ref SSHLocation
  # Tie an instance to an instance type available in the region
  # TODO: Modify / append the following two instances for our usage
  #   Adjust key / value pairs to reflect systems we are creating
  Ubuntu1Instance:
    Type: 'AWS::EC2::Instance'
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap 
        - AWSRegionUbuntu
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - !Ref UbuntuInstanceType
          - Arch
      InstanceType: !Ref UbuntuInstanceType
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: CEG3120 LDAP
      NetworkInterfaces:
        - GroupSet:
            - !Ref LinuxSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref Subnet
          PrivateIpAddress: 10.0.0.20
      # Implement Meaningful conventions
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            apt-get update && \
            apt-get install -y \
              python \
              nmap \
              vim \
              wget \
              python3-dev \
              apache2 && \
            echo "LDAP-server" > /etc/hostname && \ 
            sudo reboot
  Ubuntu2Instance:
    Type: 'AWS::EC2::Instance'
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap 
        - AWSRegionUbuntu
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - !Ref UbuntuInstanceType
          - Arch
      InstanceType: !Ref UbuntuInstanceType
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: CEG3120 Git
      NetworkInterfaces:
        - GroupSet:
            - !Ref LinuxSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref Subnet
          PrivateIpAddress: 10.0.0.25
      # Implement Meaningful conventions
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            apt-get update && \
            apt-get install -y \
              python \
              nmap \
              vim \
              git \
              wget \
              python3-dev \
              apache2 && \
            echo "git-server" > /etc/hostname && \
            reboot
  Ubuntu3Instance:
    Type: 'AWS::EC2::Instance'
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap 
        - AWSRegionUbuntu
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - !Ref UbuntuInstanceType
          - Arch
      InstanceType: !Ref UbuntuInstanceType
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: CEG3120 HAProxy
      NetworkInterfaces:
        - GroupSet:
            - !Ref LinuxSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref Subnet
          PrivateIpAddress: 10.0.0.100
      # Implement Meaningful conventions
      # Quietly produce public/private keypairs
      # Configure .ssh/config file 
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            apt-get update && \
            apt-get install -y \
              python \
              nmap \ca
              vim \
              wget \
              python3-dev \
              haproxy && \
            echo "proxy-server" > /etc/hostname && \
            echo -e "10.0.0.20\t ldap-server" >> /etc/hosts && \
            echo -e "10.0.0.25\t git-server" >> /etc/hosts && \
            ssh-keygen -f /home/ubuntu/.ssh/haproxy_key -t rsa -b 4096 -q -N ""  && \
            touch /home/ubuntu/.ssh/config && \
            echo "# Identify file for SSH" >> /home/ubuntu/.ssh/config && \
            echo "# Host [IP/DNS]" >> /home/ubuntu/.ssh/config && \
            echo -e "#\t Identity File [/path/to/private/key]" >> /home/ubuntu/.ssh/config && \
            echo "Host git-server" >> /home/ubuntu/.ssh/config && \
            echo -e "\tIdentityFile ~/.ssh/haproxy_key" >> /home/ubuntu/.ssh/config && \
            reboot
